recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:6: error: not found: value spirals
  spirals(steps-1,angle,length+increment,increment)
  ^